# CPP-Level-3

./: .gitignore  CMakeLists.txt  README.md
CPPI0-Build-and-Debug-Checkpoint/: README.md
CPPI0-Build-and-Debug-Checkpoint/solution/: main.cpp
CPPI0-Build-and-Debug-Checkpoint/starter/: main.cpp
CPPI0-Warnings-and-Debugger-Notebook/: README.md
CPPI0-Warnings-and-Debugger-Notebook/solution/: main.cpp
CPPI0-Warnings-and-Debugger-Notebook/starter/: main.cpp
CPPI1-Import-and-Reject-Bad-Rows/: README.md
CPPI1-Import-and-Reject-Bad-Rows/solution/: main.cpp
CPPI1-Import-and-Reject-Bad-Rows/starter/: main.cpp
CPPI1-Mini-Command-Scanner/: README.md
CPPI1-Mini-Command-Scanner/solution/: main.cpp
CPPI1-Mini-Command-Scanner/starter/: main.cpp
CPPI1-Saveable-Task-Manager/: README.md
CPPI1-Saveable-Task-Manager/solution/: main.cpp
CPPI1-Saveable-Task-Manager/starter/: main.cpp
CPPI2-Recursion-Trace-Drill/: README.md
CPPI2-Recursion-Trace-Drill/solution/: main.cpp
CPPI2-Recursion-Trace-Drill/starter/: main.cpp
CPPI2-Recursive-Maze-Search/: README.md
CPPI2-Recursive-Maze-Search/solution/: main.cpp
CPPI2-Recursive-Maze-Search/starter/: main.cpp
CPPI3-Container-Tradeoff-Audit/: README.md
CPPI3-Container-Tradeoff-Audit/solution/: main.cpp
CPPI3-Container-Tradeoff-Audit/starter/: main.cpp
CPPI3-Inventory-Indexer/: README.md
CPPI3-Inventory-Indexer/solution/: main.cpp
CPPI3-Inventory-Indexer/starter/: main.cpp
CPPI4-Ownership-Rewrite-Reflection/: README.md
CPPI4-Ownership-Rewrite-Reflection/solution/: main.cpp
CPPI4-Ownership-Rewrite-Reflection/starter/: main.cpp
CPPI4-Resource-Safe-File-Processor/: README.md
CPPI4-Resource-Safe-File-Processor/solution/: main.cpp
CPPI4-Resource-Safe-File-Processor/starter/: main.cpp
CPPI5-Fraction-Toolkit/: README.md
CPPI5-Fraction-Toolkit/solution/: main.cpp
CPPI5-Fraction-Toolkit/starter/: main.cpp
CPPI5-Template-Error-Reading-Drill/: README.md
CPPI5-Template-Error-Reading-Drill/solution/: main.cpp
CPPI5-Template-Error-Reading-Drill/starter/: main.cpp
CPPI6-Enum-vs-Polymorphic-State-Review/: README.md
CPPI6-Enum-vs-Polymorphic-State-Review/solution/: main.cpp
CPPI6-Enum-vs-Polymorphic-State-Review/starter/: main.cpp
CPPI6-Saveable-Command-Simulation/: README.md
CPPI6-Saveable-Command-Simulation/solution/: main.cpp
CPPI6-Saveable-Command-Simulation/starter/: main.cpp
