cmake_minimum_required(VERSION 3.20)
project(CPPLevel3 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

function(add_course_executable target source)
    add_executable(${target} ${source})
    target_compile_options(${target} PRIVATE
        $<$<CXX_COMPILER_ID:Clang,AppleClang,GNU>:-Wall -Wextra -Wpedantic>
        $<$<CXX_COMPILER_ID:MSVC>:/W4>
    )
endfunction()

add_course_executable(build_debug_starter CPPI0-Build-and-Debug-Checkpoint/starter/main.cpp)
add_course_executable(build_debug_solution CPPI0-Build-and-Debug-Checkpoint/solution/main.cpp)
add_course_executable(warnings_notebook_starter CPPI0-Warnings-and-Debugger-Notebook/starter/main.cpp)
add_course_executable(warnings_notebook_solution CPPI0-Warnings-and-Debugger-Notebook/solution/main.cpp)
add_course_executable(task_manager_starter CPPI1-Saveable-Task-Manager/starter/main.cpp)
add_course_executable(task_manager_solution CPPI1-Saveable-Task-Manager/solution/main.cpp)
add_course_executable(bad_rows_starter CPPI1-Import-and-Reject-Bad-Rows/starter/main.cpp)
add_course_executable(bad_rows_solution CPPI1-Import-and-Reject-Bad-Rows/solution/main.cpp)
add_course_executable(command_scanner_starter CPPI1-Mini-Command-Scanner/starter/main.cpp)
add_course_executable(command_scanner_solution CPPI1-Mini-Command-Scanner/solution/main.cpp)
add_course_executable(maze_search_starter CPPI2-Recursive-Maze-Search/starter/main.cpp)
add_course_executable(maze_search_solution CPPI2-Recursive-Maze-Search/solution/main.cpp)
add_course_executable(trace_drill_starter CPPI2-Recursion-Trace-Drill/starter/main.cpp)
add_course_executable(trace_drill_solution CPPI2-Recursion-Trace-Drill/solution/main.cpp)
add_course_executable(inventory_indexer_starter CPPI3-Inventory-Indexer/starter/main.cpp)
add_course_executable(inventory_indexer_solution CPPI3-Inventory-Indexer/solution/main.cpp)
add_course_executable(container_audit_starter CPPI3-Container-Tradeoff-Audit/starter/main.cpp)
add_course_executable(container_audit_solution CPPI3-Container-Tradeoff-Audit/solution/main.cpp)
add_course_executable(file_processor_starter CPPI4-Resource-Safe-File-Processor/starter/main.cpp)
add_course_executable(file_processor_solution CPPI4-Resource-Safe-File-Processor/solution/main.cpp)
add_course_executable(ownership_rewrite_starter CPPI4-Ownership-Rewrite-Reflection/starter/main.cpp)
add_course_executable(ownership_rewrite_solution CPPI4-Ownership-Rewrite-Reflection/solution/main.cpp)
add_course_executable(fraction_toolkit_starter CPPI5-Fraction-Toolkit/starter/main.cpp)
add_course_executable(fraction_toolkit_solution CPPI5-Fraction-Toolkit/solution/main.cpp)
add_course_executable(template_drill_starter CPPI5-Template-Error-Reading-Drill/starter/main.cpp)
add_course_executable(template_drill_solution CPPI5-Template-Error-Reading-Drill/solution/main.cpp)
add_course_executable(command_sim_starter CPPI6-Saveable-Command-Simulation/starter/main.cpp)
add_course_executable(command_sim_solution CPPI6-Saveable-Command-Simulation/solution/main.cpp)
add_course_executable(state_review_starter CPPI6-Enum-vs-Polymorphic-State-Review/starter/main.cpp)
add_course_executable(state_review_solution CPPI6-Enum-vs-Polymorphic-State-Review/solution/main.cpp)
